--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,33 +1,71 @@
 @import 'mixins';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /*
   breakpoint mobile <960px,
   breakpoint tablet <1264
 */
 
+*, body{
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+}
 .v-card-auth-body{
   @media screen and (width < 960px) {
-    box-shadow: unset!important;
+    // box-shadow: unset!important;
   }
 
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
-  border-radius: 8px;
-  width: 100%;
+  // box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+  // border-radius: 8px;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(214, 214, 214, 0.25);
+  border-radius: 24px;
+  margin: auto!important;
+
+  // width: 100%;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
 }
 .auth-section-logo{
-  @include bc-main-gradient;
+  background-image: url('~/assets/svg/slicing_auth_form.svg');
+  background-position-y: bottom;
+  border-radius: 0 0 0 24px;
 }
 .auth-section-otp{
   text-align: center;
+  padding: 42px 12px!important;
+
 }
+.auth-body{
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(214, 214, 214, 0.25);
+  border-radius: 24px;
+}
+
+p.auth-title-form{
+  margin: 0;
+  margin-top: 52px;
+  margin-bottom: 47px!important;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+}
+
 .w-100{
   width: 100%;
 }
 .auth-section-form{
-  background-color: #FBFDFF;
+  // background-color: #FBFDFF;
+  padding: 20px 80px!important;
+  @media screen and (width < 480px){
+    padding: 20px 50px!important;
+  }
 }
 .auth-body-form{
   padding: 20px 18px;
   background-color: #FBFDFF;
+
 }
 
 // If Only Skecth
@@ -51,30 +89,76 @@
 }
 
 .form-input{
+  input{
+    padding: 5px;
+    &:focus{
+      outline: none !important;
+      border:2px solid #F15921!important;
+      box-shadow: 0 0 3px #767676;
+    }
+  }
   label{
     display: block;
     margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #767676;
   }
-  input {
-    border: 1px solid;
-    height: 48px;
+  &.auth input {
+    height: 40px;
+    border: 2px solid #E5E9F5;
     border-radius: 4px;
   }
   &:not(:last-child){
-    margin-bottom: 12px;
+    &.auth{
+      margin-bottom: 12px;
+    }
   }
 }
+.app-bar-bnil{
+  /* Surface */
 
+  background: #FFFFFF!important;
+  /* Border/Subtle */
+
+  border-bottom: 1px solid #E5E9F5!important;
+  box-shadow: unset!important;
+}
 .btn{
   padding: 0 10px;
   height: 48px;
   border-radius: 4px;
   margin-bottom: 12px;
-  .btn-primary{
+
+  &.btn-primary{
+    background: #F15921;
+    border-radius: 4px;
+    color: white;
   }
 
   &:disabled{
     background-color: #AAAAAA;
     cursor: not-allowed;
+  }
+}
+
+.v-list-item--active{
+  background: #FED9A1!important;
+  /* Left Border - Active */
+  box-shadow: inset 2px 0px 0px #F15921!important;
+  /* Primary */
+
+color: #F15921!important;
+
+}
+
+#auth_help, #resend{
+  margin-top: 18px;
+  margin-bottom: 20px;
+  text-align: center;
+  a{
+    text-align: center;
+    color: #F15921;
   }
 }
