--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,8 +34,27 @@
 .auth-section-otp{
   text-align: center;
   padding: 42px 12px!important;
-
+  @media screen and (max-width: 480px){
+    h2{
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      /* or 122% */
+      /* Text/Normal */
+      color: #2E343D;
+    }
+    p{
+      text-align: left;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      color: #767676;
+      width: 70%;
+    }
+  }
 }
+
 .auth-body{
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(214, 214, 214, 0.25);
@@ -116,6 +135,43 @@ p.auth-title-form{
     }
   }
 }
+
+// Custom Modal
+.v-dialog{
+  border-radius: 24px!important;
+  width: unset;
+  max-width: 620px!important;
+}
+.modal-v-card{
+  text-align: center;
+  background: #FFFFFF;
+  border-radius: 24px;
+  padding: 56px 59px 47px 59px;
+  background: white;
+  width: 100%;
+  // .modal-text{
+  //   max-width: 480px;
+  // }
+  .modal-icon{
+    color: #F15921;
+    margin-bottom: 50px;
+  }
+
+  .modal-text{
+    margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    /* or 122% */
+    text-align: center;
+    /* Text/Normal */
+    color: #2E343D;
+  }
+  @media screen and (max-width: 960px) {
+    padding: 36px 20px 37px 20px;
+  }
+}
+
 .app-bar-bnil{
   /* Surface */
 
@@ -158,6 +214,9 @@ p.auth-title-form{
   a{
     text-align: center;
     color: #F15921;
+    &.disabled{
+      color: #AAAAAA;
+    }
   }
 }
 
