--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -448,13 +448,16 @@ input{
   background: url("~/assets/svg/slicing_page_header.svg");
   height: 102px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  // align-items: center;
+  justify-content: center;
   padding: 0 36px;
   background-repeat: no-repeat;
   background-size: 100%;
   @media screen and (max-width: 960px){
     background-size: unset;
     background-position-x: center;
+    flex-direction: row!important;
   }
 
   .page-title{
@@ -462,6 +465,21 @@ input{
     font-weight: 700;
     font-size: 24px;
     line-height: 26px;
+    @media screen and (max-width: 960px){
+      font-weight: 500;
+      font-size: 22px;
+    }
+  }
+
+  .page-caption{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #FFFFFF;
+    @media screen and (max-width: 960px) {
+      display: none;
+    }
   }
 }
 
