--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -86,10 +86,11 @@ tbody tr:nth-of-type(even) {
     box-shadow: unset!important;
   }
 }
-.v-expansion-panel-header{
+.v-expansion-panel-header {
   min-height: 43px!important;
   padding: 0 10px!important;
 }
+
 .v-expansion-panel--active > .v-expansion-panel-header {
   background-color: $bgPrimary;
   color: $primary
@@ -118,8 +119,16 @@ tbody tr:nth-of-type(even) {
   }
   .action-container{
     display: flex;
-    width: 300px;
+    width: 320px;
     justify-content: space-around;
+    align-items: center;
+    a{
+      text-decoration: none;
+      color: black;
+    }
+    // span{
+    //   width: 50px;
+    // }
   }
 }
 .message-bar{
@@ -127,6 +136,8 @@ tbody tr:nth-of-type(even) {
   padding: 20px;
   // display: flex;
 }
+
+// Navbar
 .navbar-container{
   width: 244px;
   position: relative;
@@ -170,6 +181,36 @@ tbody tr:nth-of-type(even) {
     position: fixed;
     @media screen and (max-width: 1264px){
       display: none;
+    }
+  }
+}
+.small-profile{
+  display: flex;
+  gap: 10px;
+
+  .sec-title{
+    p{
+      margin: 0;
+      text-align: right;
+    }
+    ._policy{
+      font-weight: 700;
+    }
+  }
+  .sec-image{
+    ._ellipse-image {
+      width: 48px;
+      height: 48px;
+      overflow: hidden;
+      border-radius: 50%;
+      img{
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        -o-object-position: center;
+        object-position: center;
+      }
     }
   }
 }
@@ -400,7 +441,9 @@ input{
   height: 48px;
   border-radius: 4px;
   margin-bottom: 12px;
-
+  &.btn-mini{
+    height: 30px!important;
+  }
   &.btn-primary{
     background: #F15921;
     border-radius: 4px;
@@ -486,11 +529,18 @@ input{
   }
 }
 
+.page-container{
+
+}
 .page-body{
   background: #FFFFFF;
   border: 1px solid #E5E9F5;
   border-radius: 16px;
   padding: 37px 26px;
+  @media screen and (width < 1440px){
+    max-width: 960px;
+    margin: auto;
+  }
 }
 
 .search-bar {
