--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -136,6 +136,11 @@ tbody tr:nth-of-type(even) {
   padding: 20px;
   // display: flex;
 }
+.validation-bar{
+  background: #e155557d;
+  padding: 20px;
+  // display: flex;
+}
 
 // Navbar
 .navbar-container{
