--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,7 @@ tbody tr:nth-of-type(even) {
 .v-data-table{
   border: thin solid rgba(0, 0, 0, 0.12)!important;
   th{
+    font-size: 16px!important;
     background-color: rgba(0, 0, 0, .1);
     &:not(:last-child){
       border-right: thin solid rgba(0, 0, 0, 0.12)!important;
@@ -46,6 +47,9 @@ tbody tr:nth-of-type(even) {
     &:first-child{
       border-top-left-radius: 20px;
     }
+  }
+  td{
+    font-size: 12px!important;
   }
   tr{
     border: unset!important;
@@ -505,10 +509,12 @@ input{
   padding: 0 36px;
   background-repeat: no-repeat;
   background-size: 100%;
-  @media screen and (max-width: 960px){
+  @media screen and (max-width: 1263px){
     background-size: unset;
     background-position-x: center;
     flex-direction: row!important;
+    align-items: center;
+    justify-content: left!important;
   }
 
   .page-title{
