--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -395,7 +395,7 @@ input{
 .v-dialog{
   border-radius: 24px!important;
   width: unset;
-  max-width: 620px!important;
+  max-width: 620px;
 }
 .main-v-card {
   border: 1px solid #e5e9f5;
