--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,139 +1,138 @@
-@import 'mixins';
-@import 'colors';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import 'vue-select/dist/vue-select.css';
-@import 'floating-vue/dist/style.css';
+@import "mixins";
+@import "colors";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import "vue-select/dist/vue-select.css";
+@import "floating-vue/dist/style.css";
 /*
   breakpoint mobile <960px,
   breakpoint tablet <1264px
 */
 
-*, body{
-  font-family: 'Inter', sans-serif;
+*,
+body {
+  font-family: "Inter", sans-serif;
   font-style: normal;
 }
 
 // Anchor a
-a{
-  &.no-border{
+a {
+  &.no-border {
     text-decoration: none;
   }
-  &.bni-primary{
-    color: $primary!important;
-    &.outlined{
+  &.bni-primary {
+    color: $primary !important;
+    &.outlined {
       text-decoration: underline;
     }
   }
-
 }
 
 // Data Table
 .v-data-table {
-  border-radius: 20px!important;
+  border-radius: 20px !important;
   box-shadow: unset;
 }
 .v-data-table__expanded.v-data-table__expanded__content {
   box-shadow: none !important;
 }
 tbody tr:nth-of-type(even) {
-  background-color: rgba(0, 0, 0, .05);
+  background-color: rgba(0, 0, 0, 0.05);
 }
-.v-data-table{
-  border: thin solid rgba(0, 0, 0, 0.12)!important;
-  th{
-    font-size: 15px!important;
-    background-color: rgba(0, 0, 0, .1);
-    &:not(:last-child){
-      border-right: thin solid rgba(0, 0, 0, 0.12)!important;
-
+.v-data-table {
+  border: thin solid rgba(0, 0, 0, 0.12) !important;
+  th {
+    font-size: 15px !important;
+    background-color: rgba(0, 0, 0, 0.1);
+    &:not(:last-child) {
+      border-right: thin solid rgba(0, 0, 0, 0.12) !important;
     }
-    &:last-child{
+    &:last-child {
       border-top-right-radius: 20px;
     }
-    &:first-child{
+    &:first-child {
       border-top-left-radius: 20px;
     }
   }
-  td{
-    font-size: 12px!important;
+  td {
+    font-size: 12px !important;
   }
-  tr{
-    border: unset!important;
-    &:last-child{
-      td{
-        &:last-child{
+  tr {
+    border: unset !important;
+    &:last-child {
+      td {
+        &:last-child {
           border-bottom-right-radius: 20px;
         }
-        &:first-child{
+        &:first-child {
           border-bottom-left-radius: 20px;
         }
       }
     }
   }
-  td{
-    &:not(:last-child){
-      border-right: thin solid rgba(0, 0, 0, 0.12)!important;
+  td {
+    &:not(:last-child) {
+      border-right: thin solid rgba(0, 0, 0, 0.12) !important;
     }
-
   }
 }
 
 // Radio Button
-.v-input--radio-group, .v-input--radio-group--row{
-  padding: 0!important;
-  margin: 0!important;
-  .v-input__slot{
-    margin: 0!important;
+.v-input--radio-group,
+.v-input--radio-group--row {
+  padding: 0 !important;
+  margin: 0 !important;
+  .v-input__slot {
+    margin: 0 !important;
   }
 }
 
 .my-app.v-application .primary--text {
   color: $primary !important;
 }
-.v-expansion-panel{
-  border: 1px solid #e5e9f5!important;
-  &::before{
-    box-shadow: unset!important;
+.v-expansion-panel {
+  border: 1px solid #e5e9f5 !important;
+  &::before {
+    box-shadow: unset !important;
   }
 }
 .v-expansion-panel-header {
-  min-height: 43px!important;
-  padding: 0 10px!important;
+  min-height: 43px !important;
+  padding: 0 10px !important;
 }
 
 .v-expansion-panel--active > .v-expansion-panel-header {
   background-color: $bgPrimary;
-  color: $primary
+  color: $primary;
 }
 // .v-pagination__item--active.primary{
 //   background-color: $primary!important;
 //   border-color: $primary!important;
 // }
 
-.v-application--wrap{
-  flex-direction: row!important;
+.v-application--wrap {
+  flex-direction: row !important;
 }
-.app-drawer{
+.app-drawer {
   position: relative;
   right: 0;
   height: 80px;
-  background: #FFFFFF;
+  background: #ffffff;
   /* Border/Subtle */
 
-  border: 1px solid #E5E9F5;
+  border: 1px solid #e5e9f5;
   justify-content: right;
   align-items: center;
   display: flex;
-  @media screen and (max-width: 1264px){
-    display: none!important;
+  @media screen and (max-width: 1264px) {
+    display: none !important;
   }
-  .action-container{
+  .action-container {
     display: flex;
     width: 320px;
     justify-content: space-around;
     align-items: center;
-    a{
+    a {
       text-decoration: none;
       color: black;
     }
@@ -142,84 +141,83 @@ tbody tr:nth-of-type(even) {
     // }
   }
 }
-.message-bar{
-  background: #FED9A1;
+.message-bar {
+  background: #fed9a1;
   padding: 20px;
   // display: flex;
 }
-.validation-bar{
+.validation-bar {
   background: #e155557d;
   padding: 20px;
   // display: flex;
 }
 
 // Navbar
-.navbar-container{
+.navbar-container {
   width: 244px;
   position: relative;
-  &.desktop{
-    @media screen and (max-width: 1264px){
+  &.desktop {
+    @media screen and (max-width: 1264px) {
       display: none;
     }
   }
 }
-.navbar{
-  &.mobile{
+.navbar {
+  &.mobile {
     // position: fixed!important;
-    .v-btn{
+    .v-btn {
       border-top: 2px solid silver;
-      min-width: 40px!important;
-      .v-btn__content{
-        color:black;
+      min-width: 40px !important;
+      .v-btn__content {
+        color: black;
       }
-      &.v-btn--active{
+      &.v-btn--active {
         border-top: 2px solid #2c61ad;
-        .v-btn__content{
-          color:inherit;
+        .v-btn__content {
+          color: inherit;
         }
       }
-      span{
-        font-size: 10px!important;
+      span {
+        font-size: 10px !important;
       }
     }
-    @media screen and (max-width: 400px){
-
+    @media screen and (max-width: 400px) {
     }
-    @media screen and (width > 1263px){
-      display: none!important;
+    @media screen and (width > 1263px) {
+      display: none !important;
     }
   }
-  &.desktop{
-    border: 1px solid #E5E9F5;
+  &.desktop {
+    border: 1px solid #e5e9f5;
     display: flex;
     flex-direction: column;
     height: 100vh;
     position: fixed;
-    @media screen and (max-width: 1264px){
+    @media screen and (max-width: 1264px) {
       display: none;
     }
   }
 }
-.small-profile{
+.small-profile {
   display: flex;
   gap: 10px;
 
-  .sec-title{
-    p{
+  .sec-title {
+    p {
       margin: 0;
       text-align: right;
     }
-    ._policy{
+    ._policy {
       font-weight: 700;
     }
   }
-  .sec-image{
+  .sec-image {
     ._ellipse-image {
       width: 48px;
       height: 48px;
       overflow: hidden;
       border-radius: 50%;
-      img{
+      img {
         width: 100%;
         height: 100%;
         -o-object-fit: cover;
@@ -232,22 +230,22 @@ tbody tr:nth-of-type(even) {
 }
 
 // ic- class
-.ic-primary{
+.ic-primary {
   color: $primary;
 }
 
 // v-card
-.v-card-auth-body{
+.v-card-auth-body {
   @media screen and (width < 960px) {
     // box-shadow: unset!important;
   }
 
   // box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
   // border-radius: 8px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 10px 20px rgba(214, 214, 214, 0.25);
   border-radius: 24px;
-  margin: auto!important;
+  margin: auto !important;
 
   // width: 100%;
   // display: flex;
@@ -255,25 +253,25 @@ tbody tr:nth-of-type(even) {
   // align-items: center;
 }
 
-.auth-section-logo{
-  background-image: url('~/assets/svg/slicing_auth_form.svg');
+.auth-section-logo {
+  background-image: url("~/assets/svg/slicing_auth_form.svg");
   background-position-y: bottom;
   border-radius: 0 0 0 24px;
 }
-.auth-section-otp{
+.auth-section-otp {
   text-align: center;
-  padding: 42px 12px!important;
-  @media screen and (max-width: 480px){
-    h2{
+  padding: 42px 12px !important;
+  @media screen and (max-width: 480px) {
+    h2 {
       font-style: normal;
       font-weight: 400;
       font-size: 18px;
       line-height: 22px;
       /* or 122% */
       /* Text/Normal */
-      color: #2E343D;
+      color: #2e343d;
     }
-    p{
+    p {
       text-align: left;
       font-weight: 400;
       font-size: 14px;
@@ -284,16 +282,16 @@ tbody tr:nth-of-type(even) {
   }
 }
 
-.auth-body{
-  background: #FFFFFF;
+.auth-body {
+  background: #ffffff;
   box-shadow: 0px 10px 20px rgba(214, 214, 214, 0.25);
   border-radius: 24px;
 }
 
-p.auth-title-form{
+p.auth-title-form {
   margin: 0;
   margin-top: 52px;
-  margin-bottom: 47px!important;
+  margin-bottom: 47px !important;
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
@@ -306,7 +304,7 @@ p.data-value {
   line-height: 20px;
   /* Text/Normal */
   color: #2e343d;
-  margin-bottom: 30px!important;
+  margin-bottom: 30px !important;
   overflow-wrap: break-word;
 }
 p.data-title {
@@ -314,64 +312,63 @@ p.data-title {
   font-size: 14px;
   line-height: 26px;
   color: #767676;
-  margin: 0!important;
+  margin: 0 !important;
 }
 
-.w-100{
+.w-100 {
   width: 100%;
 }
-.auth-section-form{
+.auth-section-form {
   // background-color: #FBFDFF;
-  padding: 20px 80px!important;
-  @media screen and (width < 480px){
-    padding: 20px 50px!important;
+  padding: 20px 80px !important;
+  @media screen and (width < 480px) {
+    padding: 20px 50px !important;
   }
 }
-.auth-body-form{
+.auth-body-form {
   padding: 20px 18px;
-  background-color: #FBFDFF;
-
+  background-color: #fbfdff;
 }
 
 // If Only Skecth
-.sketch{
-  border-color: #AAAAAA!important;
-  color: #AAAAAA;
-  *{
-    border-color: #AAAAAA!important;
-    color: #AAAAAA;
+.sketch {
+  border-color: #aaaaaa !important;
+  color: #aaaaaa;
+  * {
+    border-color: #aaaaaa !important;
+    color: #aaaaaa;
   }
-  &.bc-white{
-    background-color: #FFFFFF;
+  &.bc-white {
+    background-color: #ffffff;
   }
-  &.bc-silver{
-    background-color: #EEEEEE;
+  &.bc-silver {
+    background-color: #eeeeee;
   }
-  &.bc-blue{
-    background-color: #074EE8;
-    color: white!important;
+  &.bc-blue {
+    background-color: #074ee8;
+    color: white !important;
   }
 }
 
-input{
-  &.outlined{
-    border: 2px solid #c4c6cb!important;
-    border-radius: 4px!important;
+input {
+  &.outlined {
+    border: 2px solid #c4c6cb !important;
+    border-radius: 4px !important;
   }
-  &:disabled{
-    background-color: #EEEEEE!important;
+  &:disabled {
+    background-color: #eeeeee !important;
   }
 }
-.form-input{
-  input{
+.form-input {
+  input {
     padding: 5px;
-    &:focus{
+    &:focus {
       outline: none !important;
-      border:2px solid #F15921!important;
+      border: 2px solid #f15921 !important;
       box-shadow: 0 0 3px #767676;
     }
   }
-  label{
+  label {
     display: block;
     margin-bottom: 4px;
     font-weight: 400;
@@ -381,19 +378,19 @@ input{
   }
   &.auth input {
     height: 40px;
-    border: 2px solid #E5E9F5;
+    border: 2px solid #e5e9f5;
     border-radius: 4px;
   }
-  &:not(:last-child){
-    &.auth{
+  &:not(:last-child) {
+    &.auth {
       margin-bottom: 12px;
     }
   }
 }
 
 // Custom Modal
-.v-dialog{
-  border-radius: 24px!important;
+.v-dialog {
+  border-radius: 24px !important;
   width: unset;
   max-width: 620px;
 }
@@ -404,7 +401,7 @@ input{
   padding: 18px;
   @media screen and (max-width: 959px) {
     border: none;
-    border-top:  1px solid #e5e9f5;
+    border-top: 1px solid #e5e9f5;
     // border-bottom:  1px solid #e5e9f5;
     border-radius: 0;
     padding: 18px 0;
@@ -412,11 +409,11 @@ input{
 }
 
 .v-card-parent {
-  padding: 20px!important;
+  padding: 20px !important;
 }
-.modal-v-card{
+.modal-v-card {
   text-align: center;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 24px;
   padding: 56px 59px 47px 59px;
   background: white;
@@ -424,12 +421,12 @@ input{
   // .modal-text{
   //   max-width: 480px;
   // }
-  .modal-icon{
-    color: #F15921;
+  .modal-icon {
+    color: #f15921;
     margin-bottom: 50px;
   }
 
-  .modal-text{
+  .modal-text {
     margin-bottom: 40px;
     font-weight: 400;
     font-size: 18px;
@@ -437,77 +434,77 @@ input{
     /* or 122% */
     text-align: center;
     /* Text/Normal */
-    color: #2E343D;
+    color: #2e343d;
   }
   @media screen and (max-width: 960px) {
     padding: 36px 20px 37px 20px;
   }
 }
 
-.app-bar-bnil{
+.app-bar-bnil {
   /* Surface */
 
-  background: #FFFFFF!important;
+  background: #ffffff !important;
   /* Border/Subtle */
 
-  border-bottom: 1px solid #E5E9F5!important;
-  box-shadow: unset!important;
+  border-bottom: 1px solid #e5e9f5 !important;
+  box-shadow: unset !important;
 }
-.btn{
+.btn {
   padding: 0 10px;
   height: 48px;
   border-radius: 4px;
   margin-bottom: 12px;
-  &.btn-mini{
-    height: 30px!important;
+  &.btn-mini {
+    height: 30px !important;
   }
-  &.btn-primary{
-    background: #F15921;
+  &.btn-primary {
+    background: #f15921;
     border-radius: 4px;
     color: white;
   }
-  &.btn-primary-outlined{
+  &.btn-primary-outlined {
     background: white;
     border-radius: 4px;
-    color: #F15921;
-    border: 2px solid #F15921;
-    &:hover{
+    color: #f15921;
+    border: 2px solid #f15921;
+    &:hover {
       transition: all ease 100ms;
-      background: #F15921;
+      background: #f15921;
       border-radius: 4px;
       color: white;
     }
   }
 
-  &:disabled{
-    background-color: #AAAAAA;
+  &:disabled {
+    background-color: #aaaaaa;
     cursor: not-allowed;
   }
 }
 
-.v-list-item--active{
-  background: #FED9A1!important;
+.v-list-item--active {
+  background: #fed9a1 !important;
   /* Left Border - Active */
-  box-shadow: inset 2px 0px 0px #F15921!important;
+  box-shadow: inset 2px 0px 0px #f15921 !important;
   /* Primary */
-  color: #F15921!important;
+  color: #f15921 !important;
 }
 
-
-#auth_help, #resend{
+#auth_help,
+#resend {
   margin-top: 18px;
   margin-bottom: 20px;
   text-align: center;
-  a{
+  a {
     text-align: center;
-    color: #F15921;
-    &.disabled{
-      color: #AAAAAA;
+    color: #f15921;
+    &.disabled {
+      color: #aaaaaa;
     }
   }
 }
 
-.page-header{
+.page-header {
   background: url("~/assets/svg/slicing_page_header.svg");
   height: 102px;
   display: flex;
@@ -517,67 +514,66 @@ input{
   padding: 0 36px;
   background-repeat: no-repeat;
   background-size: 100%;
-  @media screen and (max-width: 1263px){
+  @media screen and (max-width: 1263px) {
     background-size: unset;
     background-position-x: center;
-    flex-direction: row!important;
+    flex-direction: row !important;
     align-items: center;
-    justify-content: left!important;
+    justify-content: left !important;
   }
 
-  .page-title{
+  .page-title {
     color: white;
     font-weight: 700;
     font-size: 24px;
     line-height: 26px;
-    @media screen and (max-width: 960px){
+    @media screen and (max-width: 960px) {
       font-weight: 500;
       font-size: 22px;
     }
   }
 
-  .page-caption{
+  .page-caption {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    color: #FFFFFF;
+    color: #ffffff;
     @media screen and (max-width: 960px) {
       display: none;
     }
   }
 }
 
-.page-container{
-
+.page-container {
 }
-.page-body{
-  background: #FFFFFF;
-  border: 1px solid #E5E9F5;
+.page-body {
+  background: #ffffff;
+  border: 1px solid #e5e9f5;
   border-radius: 16px;
   padding: 37px 26px;
-  @media screen and (width < 1440px){
+  @media screen and (width < 1440px) {
     max-width: 960px;
     margin: auto;
   }
 }
 
 .search-bar {
-  border: 2px solid #E5E9F5;
+  border: 2px solid #e5e9f5;
   border-radius: 4px;
-  padding: 3px 10px!important;
+  padding: 3px 10px !important;
 }
 
-.logout-container{
+.logout-container {
   cursor: pointer;
 }
 
-.information-tab{
-  color: #2E343D!important;
+.information-tab {
+  color: #2e343d !important;
 }
 
-.information-tab-active{
-  color: $primary!important;
+.information-tab-active {
+  color: $primary !important;
 }
 
 .text-error {
@@ -590,4 +586,20 @@ input{
   gap: 10px;
   width: 150px;
   justify-content: center;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
