--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -603,3 +603,10 @@ input {
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+@media screen and (max-width: 480px) {
+  .v-dialog {
+    margin: 0 !important;
+    font-size: 14px;
+  }
+}
