fix | layout margin

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -152,11 +152,11 @@ tbody tr:nth-of-type(even) {
   // display: flex;
 }
 
-.app {
-  @media screen and (width < 1263px) {
-    margin-bottom: 56px;
-  }
-}
+// .app {
+//   @media screen and (width < 1263px) {
+//     margin-bottom: 56px;
+//   }
+// }
 
 // Navbar
 .navbar-container {
